# vlc-qt2

./: .gitmodules  BUILDING.md  CHANGELOG.md  CMakeLists.txt  README.md  config.cmake  run_cmake.bat
config/: Dependencies.cmake  Macros.cmake
config/platform/: Windows.cmake
src/: CMakeLists.txt
src/core/: Audio.cpp  Audio.h  CMakeLists.txt  Common.cpp  Enums.cpp  Enums.h  Equalizer.cpp  Error.cpp  Error.h  Instance.cpp  Media.cpp  Media.h  MediaList.cpp  MediaList.h  MediaListPlayer.cpp  MediaListPlayer.h  MediaPlayer.cpp  MediaPlayer.h  MetaManager.cpp  Video.cpp  Video.h
src/plugins/VLCQt/: CMakeLists.txt
src/qml/: CMakeLists.txt  Qml.cpp  QmlPlayer.h  QmlVideoObject.h  QmlVideoOutput.h  QmlVideoPlayer.h
src/widgets/: CMakeLists.txt  ControlAudio.h  ControlVideo.h  WidgetSeek.cpp  WidgetSeek.h  WidgetVideo.cpp  WidgetVideo.h  WidgetVolumeSlider.cpp  WidgetVolumeSlider.h
tests/: CMakeLists.txt
tests/Player/: CMakeLists.txt  Player.qrc  PlayerWnd.cpp  PlayerWnd.h  main.cpp
tests/Player/Resource/: Player.qss
vlc-3.0.14/sdk/include/vlc/: libvlc_media.h  libvlc_version.h
vlc-3.0.14/sdk/include/vlc/plugins/: vlc_threads.h
vlc-3.0.14/sdk/lib/: libvlc.lib  libvlccore.lib
vlc-3.0.14/sdk/lib/pkgconfig/: libvlc.pc  vlc-plugin.pc
vlc-3.0.21/win32/include/vlc/plugins/: vlc_threads.h
vlc-3.0.21/win32/lib/: libvlc.lib  libvlccore.lib
vlc-3.0.21/win32/lib/pkgconfig/: libvlc.pc  vlc-plugin.pc
